<resources>
    <string name="app_name">MyCharacters</string>
    <string name="fullname">FullName</string>
    <string name="name">Nombre %d</string>
    <string name="no_conexion">No se detecta ninguna conexion a internet</string>
    <string name="respuesta_servidor">Respuesta del servidor: %1$s</string>
    <string name="datos">Datos: %1$s</string>
    <string name="click_personaje">%1$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title">Title</string>
    <string name="family">Family</string>
    <string name="bfirst_name">First Name:</string>
    <string name="blast_name">Last Name:</string>
    <string name="btitle">Title:</string>
    <string name="bfamily">Family:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot your password? Click here</string>
    <string name="login">Login</string>
    <string name="created_by">Created by Geovanni Romero</string>
    <string name="or">or</string>
    <string name="reset_password">Restablecer contraseña</string>
    <string name="enterEmailReset">Ingresa el correo para restablecer su contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="emailSentSuccess">El correo para restablecer la contraseña ha sido enviado</string>
    <string name="emailSentFailure">No se pudo enviar el correro</string>
    <string name="pleaseEnterEmail">Por favor ingresa un correo</string>
    <string name="cancel">Cancelar</string>
    <string name="emailRequired">Se requiere el correo</string>
    <string name="passwordLengthRequired">Se requiere una contraseña o la contraseña no tiene por lo menos 6 caracteres</string>
    <string name="invalidEmail">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="invalidPassword">Error: La contraseña no es válida</string>
    <string name="existingAccount">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="emailAlreadyUsed">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="invalid_password">La contraseña porporcionada es inválida</string>
    <string name="noRed">Red no disponible o se interrumpió la conexión</string>
    <string name="authentication_failure">Error. No se pudo autenticar exitosamente.</string>
    <string name="email_sent">El correo de verificación ha sido enviado a tu cuenta</string>
    <string name="email_not_sent">No se pudo enviar el correo de verificación</string>
    <string name="expired_session">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="inexistent_user">Error: No existe el usuario con la información proporcionada.</string>
    <string name="password_length">La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="autenticacion_exitosa">Autenticación exitosa</string>
    <string name="usuario_creado">Usuario creado</string>
    <string name="error_invalid_email">ERROR_INVALID_EMAIL</string>
    <string name="error_wrong_password">ERROR_WRONG_PASSWORD</string>
    <string name="account_exists">ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL</string>
    <string name="error_email">ERROR_EMAIL_ALREADY_IN_USE</string>
    <string name="error_user_token_expired">ERROR_USER_TOKEN_EXPIRED</string>
    <string name="error_user_not_found">ERROR_USER_NOT_FOUND</string>
    <string name="error_password">ERROR_WEAK_PASSWORD</string>
    <string name="no_network">NO_NETWORK</string>
    <string name="sign_out">Sign Out</string>
    <string name="clic_boton">clic_boton</string>
    <string name="email_verify">Debes verificar tu correo para poder acceder a la aplicacion</string>
</resources>