<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue_grey"
    android:foreground="@drawable/custom_ripple"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailsActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivPersonaje"
        android:layout_width="113dp"
        android:layout_height="148dp"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238"
        app:riv_corner_radius="10dp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivCasa"
        android:layout_width="113dp"
        android:layout_height="148dp"
        android:layout_marginEnd="56dp"

        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toEndOf="@+id/ivPersonaje"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238"
        app:riv_corner_radius="10dp" />

    <TextView
        android:id="@+id/textFullName"
        android:layout_width="211dp"
        android:layout_height="37dp"
        android:layout_marginTop="72dp"
        android:background="@color/light_grey"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/fullname"
        android:textColor="@color/wine"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivPersonaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textFirstName"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/light_grey"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/first_name"
        android:textColor="@color/wine"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <TextView
        android:id="@+id/textLastName"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/light_grey"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/last_name"
        android:textColor="@color/wine"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/light_grey"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title"
        android:textColor="@color/wine"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textFamily"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textFamily"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="160dp"
        android:background="@color/light_grey"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/family"
        android:textColor="@color/wine"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbConexion"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminateDrawable="@drawable/progress_anim"
        android:indeterminateDuration="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>